homework2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-dp
  labels:
    app: heakthcheck-dp
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
        - name: healthcheck-app
          image: sinayko/healthcheck:amd64
          ports:
            - containerPort: 8000
